--- a/css/index.css
+++ b/css/index.css
@@ -350,3 +350,8 @@ img {
   background: #FFFFFF;
   color: #17A2B8;
 }
+video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
